<resources>
    <!--URL-->
    <string name="URL">http://192.168.137.1:8080/</string>

    <string name="app_name"></string>
    <string name="menu_home">个人信息</string>
    <string name="menu_scan">扫一扫</string>
    <string name="menu_orderlist">订单</string>
    <!--MainActivity-->
    <string name="foot_left">扫一扫</string>
    <string name="foot_center">订单</string>
    <string name="foot_right">我</string>
    <string name="center_text">暂无订单</string>

    <!--MeActivity-->
    <string name="user_name">买家1</string>
    <string name="chain_address">地址：0x1234abde354eef222</string>
    <string name="chain_value">70 eth</string>
    <string name="user_info">详细信息</string>

    <!--PigInfoActivity-->
    <string name="pig_info">生猪详情</string>
    <string name="ERC721">ERC721 ID:</string>
    <string name="bigchainDB">BigChainDB ID:</string>
    <string name="price">价格：10eth</string>
    <string name="breed">品种：</string>
    <string name="weight">体重：大约KG</string>
    <string name="status">状态：0</string>
    <string name="btntext_buy">确认购买</string>

    <!--address for buy and sell-->
    <string name="info">信息</string>
    <string name="buy_address">0xe9fed27334a770717d80b94254db444bffbabec8</string>
    <string name="sell_address">0x5a17470ae96b910b54a5b715b718dfa792f8b9ae</string>
    <string name="buy_key">123456</string>
    <string name="buy_account">123456</string>
    <string name="sell_key">654321</string>
    <string name="balance">100ETH</string>

    <!--address for contract-->
    <string name="contract">0x1234567655</string>
    <string name="title_activity_receipt">receiptActivity</string>
    <string name="title_activity_sellshipment">sellshipmentActivity</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
