<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ValueActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1">

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="8"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                />
            <TextView
                android:id="@+id/title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorFont"
                android:text="@string/info"
                android:textSize="40dp"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                />

            <TextView
                android:id="@+id/balance"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/balance"
                android:textSize="30dp"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                />

            <TextView
                android:id="@+id/address"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="地址："
                android:textSize="30dp"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="80dp"
                />

            <Button
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="退出登录"
                android:textSize="30dp"/>

        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="@color/colorPrimary">



        <Button
            android:id="@+id/btn_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:layout_weight="1"
            android:text="@string/foot_left"
            android:textSize="18dp"/>


        <Button
            android:id="@+id/btn_orderlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:layout_weight="1"
            android:text="@string/foot_center"
            android:textSize="18dp"/>


        <Button
            android:id="@+id/btn_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:layout_weight="1"
            android:text="@string/foot_right"
            android:textSize="18dp"/>

    </LinearLayout>

</LinearLayout>