<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="91dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="信息"
            android:textSize="45dp"
            android:textColor="@color/colorPrimary"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txt_balance"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="186dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:text="balance"
                android:textSize="25dp" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txt_address"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="265dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:text="address"
                android:textSize="25dp" />
        </RelativeLayout>


        <Button
            android:id="@+id/btn_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginBottom="119dp"
            android:text="退出登录"
            android:textSize="30dp" />



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_info"
                android:layout_width="127dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/menu_home"
                android:textColor="@color/front"
                android:textSize="18dp" />


            <Button
                android:id="@+id/btn_scan"
                android:layout_width="147dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@+id/btn_info"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/menu_scan"
                android:textColor="@color/front"
                android:textSize="18dp" />


            <Button
                android:id="@+id/btn_orderlist"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="463dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/menu_orderlist"
                android:textColor="@color/front"
                android:textSize="18dp" />


        </RelativeLayout>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>