<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"

    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".receiptActivity">


    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">



        <TextView
            android:id="@+id/OrderDetail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="订单详情"
            android:textSize="25dp"
            android:gravity="center"
            android:orientation="horizontal" />



        <LinearLayout
            android:id="@+id/LinearLayout3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:layout_weight="8">


                <ImageView
                    android:layout_width="103dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/head" />

                <TextView
                    android:id="@+id/sell_shipment_id"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="ID："
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|bottom"
                    android:text=""
                    />

                <TextView
                    android:id="@+id/sell_shipment_money"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="金额："
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|bottom"
                    android:text=""
                    />

                <TextView
                    android:id="@+id/sell_shipment_addr"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="卖家地址："
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|bottom"
                    android:text=""
                    />


                <TextView
                    android:id="@+id/sell_shipment_state"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="当前状态："
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|bottom"
                    android:text=""
                    />

                <Button
                    android:id="@+id/btn_sell_shipment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="确认发货"
                    android:textSize="20dp" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <!--底部水平设置-->
    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="@color/colorPrimary">



        <Button
            android:id="@+id/btn_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:layout_weight="1"
            android:text="@string/foot_left" />


        <Button
            android:id="@+id/btn_orderlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:layout_weight="1"
            android:text="@string/foot_center" />


        <Button
            android:id="@+id/btn_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:layout_weight="1"
            android:text="@string/foot_right" />


    </LinearLayout>

</LinearLayout>